--- a/Api/Karnel-Api/Karnel-Api/Karnel-Api.csproj
+++ b/Api/Karnel-Api/Karnel-Api/Karnel-Api.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+        <PackageReference Include="google-search-results-dotnet" Version="2.0.1" />
         <PackageReference Include="MailKit" Version="4.9.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
